feat: Adding endpoint to create circle
